fix menu layout issue

--- a/assets/styles/modules/navbar.less
+++ b/assets/styles/modules/navbar.less
@@ -33,8 +33,10 @@
         .navigation {
             padding: 20px 0 35px;
             @media screen and (min-width: @screen-md-min) {
-                padding: 4px 10px;
+                float: right;
                 margin: 19px 0 0;
+                padding: 4px 10px;
+                width: 665px;
             }
             .dropdown-menu {
                 @media screen and (max-width: @screen-sm-max) {
@@ -74,7 +76,6 @@
             @media screen and (min-width: @screen-md-min) {
                 float: left;
                 margin-bottom: 0px;
-                margin-left: 110px;
             }
             > li {
                 float: none;
